--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
    "license": "ISC",
    "dependencies": {
       "mysql2": "^3.11.3",
-      "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.20"
    },
    "devDependencies": {
+      "@types/jest": "^29.5.14",
       "@types/node": "^16.11.10",
+      "jest": "^29.7.0",
+      "ts-jest": "^29.2.5",
       "ts-node": "^10.9.1",
       "typescript": "4.5.2"
    }
